--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
    <title>My blog</title>
-   <link rel="stylesheet" type="text/css" href="G:/Users/Florian/Documents/blog/styles.css">
+   <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <div class="header">
