--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>About</title>
-    <link rel="stylesheet" href="G:/Users/Florian/Documents/blog/styles.css">
+    <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
     <div class="header">
